# vibeman

./: .cursorrules  .editorconfig  .env.example  .gitignore  .refactor-ci.example.json  .refactor-pr.example.json  .refactor.config.example.json  ARCHITECTURE.md  BACKGROUND_TASKS.md  CLAUDE.md  CONTEXT_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  CUserskazdakirovibemanrefactor-batch-53-complete.md  CUserskazdakirovibemanrefactor-batch-53.txt  CUserskazdakirovibemants_errors.tmp  DATABASE.md  DEPENDENCY_VISUALIZER_IMPLEMENTATION.md  DEVELOPMENT.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_MOTIONBUTTON.md  INTEGRATION_CHECKLIST.md  INTEGRATION_STATUS.md  LICENSE  LLM_SETUP.md  PHASE_1_COMPLETION_REPORT.md  PRODUCTION_POLISH_PLAN.md  README.md  REFACTORING_BATCH_2_SUMMARY.md  REFACTORING_BATCH_31_SUMMARY.md  REFACTORING_BATCH_3_SUMMARY.md  REFACTORING_BATCH_7_SUMMARY.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY_2025-01-24.md  REFACTOR_BATCH_1_FIXES.md  REFACTOR_BATCH_1_SUMMARY.md  REFACTOR_WIZARD_IMPROVEMENTS.md  SETUP.md  TASKS.md  (+35 more)
.claude/: CLAUDE.md  settings.json  settings.local.json
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
context/: FILE_STRUCTURE.MD  high.md
cursor-tasks/: _manifest.json  (+1 more)
docs/: API.md  (+95 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/brain/: anomaly.rs  correlate.rs  decay.rs  mod.rs
src-tauri/src/commands/: brain_cmds.rs  claude_cmds.rs  conductor_cmds.rs  db_cmds.rs  db_repos.rs  fs_cmds.rs  git_server_cmds.rs  ideas_cmds.rs  lifecycle_cmds.rs  misc_cmds.rs  mod.rs  process_cmds.rs  social_cmds.rs  system.rs  triage_cmds.rs
src-tauri/src/conductor/: git_ops.rs  mod.rs  scheduler.rs  state_machine.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs
src-tauri/src/fs/: mod.rs  scanner.rs  watcher.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/process/: manager.rs  mod.rs  stream.rs
src-tauri/src/runtime/: execution.rs  mod.rs  supervisor.rs
src-tauri/src/schemas/: mod.rs
(+4767 files in other folders)
